@@ -16,6 +16,6 @@ DIST atlas3.8.2.tar.bz2 2468393 RMD160 8160ccb3af7cd7365ba87c77d636fb68b24c62ae 
 DIST atlas3.9.3.tar.bz2 4625874 RMD160 1739e67d9f5f597ceb4a63093bc619bb173b0171 SHA1 b56438eda01f09999e20b2fc99523cc205b8b905 SHA256 6ef284a74330208b2560a1b52284300ef5f77132826c1caaaf9a9241bf4434a0
 EBUILD blas-atlas-3.8.0.ebuild 7083 RMD160 1827b6744cc4813b28c4574fbf92a167eb5b3e9f SHA1 d490044d1d1f3f64572d96684263fd41ee9db02d SHA256 51d0feea9e1204ef713f0af41ea598766f2c8bda2041030272f711dac631bc2f
 EBUILD blas-atlas-3.8.2.ebuild 6789 RMD160 9c0d1073ec2852f0a77c7806788f4b24f41ff653 SHA1 5fe455b7ed37aaeed31234e1caa83fb317fa0846 SHA256 236eb6d98fa5293799b331989632ad0e9c3f19df5a33a886806bceee68902b5a
-EBUILD blas-atlas-3.9.3.ebuild 7452 RMD160 61dd8ca1308833e22b564114cfb08144fc299b73 SHA1 29874d3fc422e34fd9fe57ba797ca7fc63ed68a3 SHA256 d247de3a138397c55d6b16e774a016bdb742405f47a6b73fa117d3be315335a4
-MISC ChangeLog 18995 RMD160 c334258c227fdec84cb9f209f8cd6893025aa12d SHA1 4494a48c981ba41a6ee6f11f3556c68aa41e46a7 SHA256 f1bfe8efc26d63fe81b4c299f1a67e668e9644615b3c64493e2a4aa2c3a0756c
+EBUILD blas-atlas-3.9.3.ebuild 7510 RMD160 33cd33fac273c116e617a029b2ed3b8e1470f9e8 SHA1 6b9b745c437f94a4b3fb2bec973c03d388e586b3 SHA256 6606d64792ea400eb0758992fbeea77f2102afd4549224b5117646ae6f5e8e62
+MISC ChangeLog 19120 RMD160 910e5c8d2f3b4329f3f377a138d00e408797445c SHA1 291c1e3775d21a1ee0e2e896342f8dd5610ba026 SHA256 5023bc7e8604e4a3f66efeaac2323434e7ff3145bc9ab92d6faaeada191890ee
 MISC metadata.xml 156 RMD160 dc078172bfebcb25d69bdf8731714f9cce9d3e36 SHA1 da2b240a255820145b7c83a5c48e45b96b7e9ee6 SHA256 5d22100902db7507a5b5493dd4a66cdb08025faf80a2c0b75e6392315c47f900
